# quant-sentiment-monitor

./: .env.example  .gitignore  .ruff.toml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.cursor/: environment.json
.github/workflows/: tests.yml
configs/: alert_governance_rules.yaml  billing_sla_rules.yaml  event_calendar_rules.yaml  feedback_learning_rules.yaml  investment_event_catalog.yaml  manual_input_rules.yaml  multi_user_rules.yaml  portfolio_impact_rules.yaml  source_compliance_registry.yaml  source_weight_rules.yaml  sources_registry.default.yaml  sources_registry.override.yaml  topic_taxonomy.yaml  webhook_delivery_rules.yaml
debian-ops-agent/: .env.example  .gitignore  README.md
debian-ops-agent/app/: __init__.py  config.py  executor.py  main.py  models.py  policy.py
debian-ops-agent/deploy/: ops-agent.service
debian-ops-agent/policy/: policy.yaml
k8s/: configmap.yaml  deployment-api.yaml  deployment-model.yaml  deployment-worker.yaml  hpa-api.yaml  hpa-worker.yaml  ingress.yaml  kustomization.yaml  networkpolicy.yaml  pdb-api.yaml  secret.example.yaml  service-model.yaml  service.yaml  serviceaccount.yaml
model_service/: main.py
scripts/: bootstrap_cloud_env.sh  cloud_agent_startup.sh  run_backtest.py  run_collector.py  run_collector_worker.py  run_model_service.py  run_pipeline.py  run_tests.sh  run_tests_cov.sh
tests/: test_api.py  test_inference_adapter.py  test_persistence.py  test_sql_state_backend.py
web/: app.js  index.html  styles.css
(+19 files in other folders)
